# iplTweetNoobGenerator

./: .cursorules  .env.example  .gitignore  README.md  docker-compose.yml
agent/: .dockerignore  Dockerfile  __init__.py  agent.py  app.py  mcp_client.py  pyproject.toml
agent/prompts/: ipl_tweet_agent_prompt.py
agent/routes/: __init__.py  v1.py
logs_metrics/: .dockerignore  Dockerfile  README.md  metrics_client.py  metrics_server.py  pyproject.toml
logs_metrics/grafana/dashboards/: ipl_tweet_dashboard.json
logs_metrics/grafana/provisioning/dashboards/: dashboard.yml
logs_metrics/prometheus/: prometheus.yml
mcp_servers/tweet_generator/: .dockerignore  Dockerfile  pyproject.toml  tweet_mcp_server.py
mcp_servers/tweet_generator/tools/: ipl_tweet_prompt_rohit_4_6.py
